# aitestlab

./: .gitignore  .pre-commit-config.yaml  DOCS_REORGANIZATION.md  MYWORK.md  Makefile  README.md  main.py  pyproject.toml  test_config.py
backend/: __init__.py  requirements.txt
backend/api/: auth.py  chat.py  testcase.py
backend/conf/: config.py  constants.py
backend/core/: __init__.py  config_validator.py  database.py  deps.py  exceptions.py  init_app.py  llm.py  logger.py  security.py
backend/data/: aitestlab.db  aitestlab.db-shm  aitestlab.db-wal
backend/models/: auth.py  chat.py  testcase.py  user.py
backend/services/: auth_service.py  autogen_service.py  testcase_service.py
docs/: AI_MODULES_SUMMARY.md  AI_TESTCASE_MODULE.md  BACKEND_LOG_STDOUT_FIX.md  BACKEND_SSE_FORMAT_FIX.md  BACKEND_SSE_PREFIX_FIX.md  DOCS_INDEX.md  DOCS_REORGANIZATION_FINAL.md  DOCUMENTATION_SUMMARY.md  FILE_UPLOAD_OPTIMIZATION.md  FRONTEND_ADAPTATION.md  FRONTEND_AGENT_DISPLAY_OPTIMIZATION.md  FRONTEND_LAYOUT_OVERFLOW_FIX.md  FRONTEND_NAVIGATION_OPTIMIZATION.md  FRONTEND_SSE_FIX.md  FRONTEND_STREAMING_CONDITION_FIX.md  FRONTEND_STREAMING_DISPLAY_FIX.md  FRONTEND_WARNINGS_FIX.md  LOADING_STATE_FIX.md  README.md  SIMPLE_SSE_IMPLEMENTATION.md  SSE_DUPLICATE_PREFIX_FIX.md  STREAMING_API_REDESIGN.md  TESTCASE_PAGE_ERROR_FIX.md  TESTCASE_PAGE_STREAMING_FIX.md  UI_OPTIMIZATION_SUMMARY.md
docs/architecture/: AI_MODULES.md  SYSTEM_ARCHITECTURE.md  USER_SYSTEM.md
docs/database/: DATABASE_DESIGN.md  DATA_INITIALIZATION.md  MIGRATION_GUIDE.md
docs/design/: GEMINI_FEATURES_COMPARISON.md  MARKDOWN_TEST_EXAMPLES.md  README.md
docs/development/: CODE_REFACTORING_SUMMARY.md  DEVELOPMENT_SETUP.md  FRONTEND_BACKEND_INTEGRATION.md  LOGGING_GUIDE.md  LOGGING_IMPLEMENTATION.md  MARKDOWN_RENDERER.md  README.md
docs/fixes/: README.md  修复总结.md
docs/fixes/backend/: LOG_OPTIMIZATION.md  README.md  SHARED_LLM_CLIENT_REFACTOR.md  TESTCASE_SERVICE_REDESIGN.md
docs/fixes/frontend/: FRONTEND_CONTENT_DISPLAY_OPTIMIZATION.md  NAVIGATION_SCROLL_OPTIMIZATION.md  README.md  REALTIME_STREAMING_FIX.md
docs/fixes/streaming/: CONVERSATION_ID_MANAGEMENT.md  README.md  STREAMING_OUTPUT_FIX.md  TESTCASE_SSE_DUPLICATE_PREFIX_FIX.md  TESTCASE_SSE_PARSING_FIX.md
docs/optimizations/: README.md
docs/optimizations/architecture/: DOCS_REORGANIZATION_SUMMARY.md  FRONTEND_FIX_SUMMARY.md  PROJECT_REPOSITIONING.md  README.md
docs/optimizations/performance/: AUTOGEN_STREAM_OPTIMIZATION.md  BACKEND_STREAMING_OUTPUT_OPTIMIZATION.md  LLAMA_INDEX_FILE_PARSING_OPTIMIZATION.md  (+1 more)
docs/overview/: PROJECT_OVERVIEW.md
docs/setup/: FACTORY_PATTERN.md  MAKEFILE_GUIDE.md  README.md
docs/troubleshooting/: AUTOGEN_FIXES.md  BACKEND_PROCESS_MANAGEMENT.md  FRONTEND_ICON_FIX.md  PROCESS_MANAGEMENT.md  README.md
docs/ui-design/: NAVIGATION_SYSTEM.md  TESTCASE_PAGE_OPTIMIZATION.md  UI_DESIGN_GUIDE.md  UI_OPTIMIZATION_RECORD.md
docs/work/: 01-AIchat.md  02-智能体架构及用例评审v1版本.md  README.md
examples/: agent_call_tools.py  autogen_chat.py  autogen_model.py  exec_cmd.py  llms.py  marker_example.py  memory.py  multi_agent.py  openai_chat.py  requirement_agents.py  requirements.py  team.py  testcase_agents.py  tools.py  topic.py
examples/agent/: __init__.py  chat.py  chat.py1  demo.py  llms.py  performance.py  performance_agents.py  testcase.py  utils.py
examples/conf/: config.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/models/: 0_20250609021414_init.py
scripts/: init_db.py
tests/: README.md  test.py  test_makefile.sh  test_testcase_module.py
(+36 files in other folders)
